--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 seed-phrases-for-stellar
 ========================
 
-This package provides a command-line script and library module for generating
+This package provides a command-line script and a library module for generating
 Stellar accounts from BIP39/Electrum seed phrases. It performs deterministic
 generation of Stellar account keys from mnemonic seed phrases. Each seed
 phrase may optionally be extended with custom words that play the role of
